loc & sap xep
